// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileAvatar Snapshot - different file types 1`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-accent"
  >
    PDF
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 2`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-info"
  >
    IMG
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 3`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-info"
  >
    DOC
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 4`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-positive"
  >
    XLS
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 5`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-warning"
  >
    PPT
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 6`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-secondary"
  >
    TXT
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 7`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-info"
  >
    VID
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 8`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-accent"
  >
    AUD
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 9`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-warning"
  >
    ZIP
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 10`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-positive"
  >
    CSV
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 11`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-accent"
  >
    HTML
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 12`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground-secondary"
  >
    MD
  </Text>
</View>
`;

exports[`FileAvatar Snapshot - different file types 13`] = `
<View
  className="flex shrink-0 items-center justify-center overflow-hidden text-center font-semibold w-8 h-8 rounded border border-solid border-f1-border-secondary bg-f1-background"
>
  <Text
    className="text-xs font-semibold text-f1-foreground"
  >
    FILE
  </Text>
</View>
`;
